--- a/src/app/modules/hero-layouts/hero-layout-form/hero-layout-form.component.html
+++ b/src/app/modules/hero-layouts/hero-layout-form/hero-layout-form.component.html
@@ -121,7 +121,7 @@
                     <div class="bg-blue-50 border border-blue-200 rounded-lg p-4">
                         <div class="flex items-center gap-2 mb-3">
                             <i class="pi pi-info-circle text-blue-600"></i>
-                            <h3 class="text-sm font-medium text-blue-800">{{ 'heroLayout.layoutSettingsInfo' | translate }}</h3>
+                            <h3 class="text-sm font-medium text-blue-800">{{ 'heroLayout.layoutSettingsTitle' | translate }}</h3>
                         </div>
                         <p class="text-sm text-blue-700">{{ 'heroLayout.layoutSettingsDescription' | translate }}</p>
                     </div>
@@ -140,6 +140,12 @@
                                        optionValue="value"
                                        [placeholder]="'heroLayout.selectMaxWidth' | translate"
                                        class="w-full">
+                                <ng-template pTemplate="selectedItem" let-option>
+                                    <span *ngIf="option">{{ option.label | translate }}</span>
+                                </ng-template>
+                                <ng-template pTemplate="item" let-option>
+                                    <span>{{ option.label | translate }}</span>
+                                </ng-template>
                             </p-dropdown>
                             <small class="text-gray-500 text-xs mt-1 block">{{ 'heroLayout.maxWidthHint' | translate }}</small>
                         </div>
@@ -155,6 +161,12 @@
                                        optionValue="value"
                                        [placeholder]="'heroLayout.selectJustifyContent' | translate"
                                        class="w-full">
+                                <ng-template pTemplate="selectedItem" let-option>
+                                    <span *ngIf="option">{{ option.label | translate }}</span>
+                                </ng-template>
+                                <ng-template pTemplate="item" let-option>
+                                    <span>{{ option.label | translate }}</span>
+                                </ng-template>
                             </p-dropdown>
                             <small class="text-gray-500 text-xs mt-1 block">{{ 'heroLayout.justifyContentHint' | translate }}</small>
                         </div>
@@ -170,6 +182,12 @@
                                        optionValue="value"
                                        [placeholder]="'heroLayout.selectAlignItems' | translate"
                                        class="w-full">
+                                <ng-template pTemplate="selectedItem" let-option>
+                                    <span *ngIf="option">{{ option.label | translate }}</span>
+                                </ng-template>
+                                <ng-template pTemplate="item" let-option>
+                                    <span>{{ option.label | translate }}</span>
+                                </ng-template>
                             </p-dropdown>
                             <small class="text-gray-500 text-xs mt-1 block">{{ 'heroLayout.alignItemsHint' | translate }}</small>
                         </div>
@@ -234,7 +252,8 @@
                                         [control]="item.get('image')!"
                                         [multiple]="false"
                                         [filesServer]="item.get('image')?.value"
-                                        [accept]="'image/*'">
+                                        [accept]="'image/*'"
+                                        (onExportFiles)="onFileChange($event, i, 'image')">
                                     </app-upload-files>
                                 </div>
 
@@ -252,7 +271,8 @@
                                         [control]="item.get('video')!"
                                         [multiple]="false"
                                         [filesServer]="item.get('video')?.value"
-                                        [accept]="'video/*'">
+                                        [accept]="'video/*'"
+                                        (onExportFiles)="onFileChange($event, i, 'video')">
                                     </app-upload-files>
                                     
                                     <!-- Video Autoplay Option -->
@@ -269,6 +289,48 @@
                                             <p-inputSwitch formControlName="videoAutoplay"></p-inputSwitch>
                                         </div>
                                     </div>
+                                </div>
+
+                                <!-- Layout Settings Info -->
+                                <div class="field">
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">{{ 'heroLayout.layoutSettingsInfo.label' | translate }}</label>
+                                    <p-dropdown
+                                        formControlName="layoutSettingsInfo"
+                                        [options]="layoutSettingsInfoOptions"
+                                        optionLabel="label"
+                                        optionValue="value"
+                                        [placeholder]="'heroLayout.layoutSettingsInfo.placeholder' | translate"
+                                        class="w-full"
+                                        [showClear]="false">
+                                        <ng-template pTemplate="selectedItem" let-selectedOption>
+                                            <span *ngIf="selectedOption">{{ selectedOption.label | translate }}</span>
+                                        </ng-template>
+                                        <ng-template pTemplate="item" let-option>
+                                            <span>{{ option.label | translate }}</span>
+                                        </ng-template>
+                                    </p-dropdown>
+                                    <small class="text-gray-500">{{ 'heroLayout.layoutSettingsInfo.description' | translate }}</small>
+                                </div>
+
+                                <!-- Object Fit -->
+                                <div class="field">
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">{{ 'heroLayout.objectFit.label' | translate }}</label>
+                                    <p-dropdown
+                                        formControlName="objectFit"
+                                        [options]="objectFitOptions"
+                                        optionLabel="label"
+                                        optionValue="value"
+                                        [placeholder]="'heroLayout.objectFit.placeholder' | translate"
+                                        class="w-full"
+                                        [showClear]="false">
+                                        <ng-template pTemplate="selectedItem" let-selectedOption>
+                                            <span *ngIf="selectedOption">{{ selectedOption.label | translate }}</span>
+                                        </ng-template>
+                                        <ng-template pTemplate="item" let-option>
+                                            <span>{{ option.label | translate }}</span>
+                                        </ng-template>
+                                    </p-dropdown>
+                                    <small class="text-gray-500">{{ 'heroLayout.objectFit.description' | translate }}</small>
                                 </div>
 
                                 <!-- Title -->
