--- a/src/app/modules/review/review-list/review-list.component.html
+++ b/src/app/modules/review/review-list/review-list.component.html
@@ -159,7 +159,7 @@
                     <div class="field mb-4">
                         <label for="images" class="font-bold text-gray-700 mb-2 block">{{ 'review.uploadImages' | translate }}</label>
                         <app-upload-files id="images" [index]="0" [control]="formControlImages" [multiple]="true" [accept]="'image/*'"
-                            [filesServer]="reviewForm.get('images')?.value">
+                            [filesServer]="reviewForm.get('images')?.value" (onExportFiles)="onImagesChange($event)">
                         </app-upload-files>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                     <div class="field mb-4">
                         <label for="video" class="font-bold text-gray-700 mb-2 block">{{ 'review.uploadVideo' | translate }}</label>
                         <app-upload-files id="video" [index]="1" [control]="formControlVideo" [multiple]="false" [accept]="'video/*'"
-                            [filesServer]="reviewForm.get('video')?.value">
+                            [filesServer]="reviewForm.get('video')?.value" (onExportFiles)="onVideoChange($event)">
                         </app-upload-files>
                     </div>
                     <div class="field">
